# apertium-fao-nor

./: .gitattributes  .gitignore  Makefile.am  README  apertium-fao-nor.fao-nno.lrx  apertium-fao-nor.fao-nno.metalrx  apertium-fao-nor.fao-nno.t1x  apertium-fao-nor.fao-nob.lrx  apertium-fao-nor.fao-nob.lsx  apertium-fao-nor.fao-nob.metalrx  apertium-fao-nor.fao-nob.t1x  apertium-fao-nor.fao-nor.dix  apertium-fao-nor.nob-fao.lrx  apertium-fao-nor.nob-fao.metalrx  configure.ac  generation.sh  modes.xml
dev/: apertium-fao-nor.fao-nob.t1x  corpus-stats.sh  fao-nob.context.freq  fao-nor-generated.dix  make-missinglist-with-coverage
dev/bidix/: adj.list  adj.scored.list  adv.list  adv.scored.list  calc-levenshtein.py  noun.list  noun.scored.list  prep.list  prep.scored.list  rerun-scores.sh  vblex.list  vblex.scored.list
test/: fao-nob-disam-expected.txt  fao-nob-generator-expected.txt  fao-nob-generator-gold.txt  fao-nob-input.txt  fao-nob-interchunk-expected.txt  fao-nob-lex-expected.txt  fao-nob-morph-expected.txt  fao-nob-postchunk-expected.txt  tests.json
texts/: corpus-stat.sh  postedited.story.fao.txt  sprakdeklarasjonen.fao-nob.txt  sprakdeklarasjonen.nob.orig.txt  sprakdeklarasjonen.nob.txt  språkdeklarasjonen.fao-nob.txt  språkdeklarasjonen.fao.txt  språkdeklarasjonen.nob.txt  story.fao.txt  story.nob.txt  unknown-fao.txt  wiki.fao-nob.mt.txt  wiki.fao-nob.postedit.txt  wiki.fao.txt
